Revise index.html for homepage layout and styling
Updated the HTML structure and styles for the EclipseESK homepage, including navigation links and hero section content.

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                     </svg>
                     <div class="card-title">Active Community</div>
                     <p class="card-text">
-                        Connect with hundreds of friendly members who are ready to chat, form groups, and share their experiences in a positive environment.
+                        Connect with friendly members who are ready to chat, form groups, and share their experiences in a positive environment.
                     </p>
                 </div>
 
@@ -481,4 +481,5 @@
         });
     </script>
 </body>
+
 </html>
