--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         <div class="container">
             <div class="nav-content">
                 <!-- Logo Section -->
-                <a href="home.html" class="logo-link">
+                <a href="index.html" class="logo-link">
                     <div class="logo-icon">
                         <!-- Reusing the image path from the original file -->
                         <img style="width: 45px; border-radius: 20px;" src="assets/favicon.png" alt="EclipseESK Logo">
@@ -483,3 +483,4 @@
 </body>
 
 </html>
+
