--- a/guides.html
+++ b/guides.html
@@ -358,6 +358,14 @@
                 <div class="desktop-menu">
                     <a href="index.html" class="nav-link">Home</a>
                     <a href="rules.html" class="nav-link">Rules</a>
+
+<div class="nav-dropdown">
+                        <a href="#" class="nav-link">Resources</a>
+                        <div class="dropdown-content">
+                            <a href="onl-guides/road-textures.html">Road Texture DLC Pack</a>
+                        </div>
+                    </div>
+
                     <div class="nav-dropdown">
                         <!-- Removed href="#anchor" links as this is the index page -->
                         <a href="guides.html" class="nav-link ">Guides</a>
@@ -423,12 +431,26 @@
                     <span class="card-icon">
                         <img style="width: 30px; border-radius: 20px;" src="assets/favicon.png" alt="EclipseESK Logo">
                     </span>
-                    <h2 class="card-title">More Coming Soon</h2>
+                    <h2 class="card-title">How to Start Robberies</h2>
                 </div>
                 <p class="card-summary">
                     - - - 
                 </p>
-                <a href="#" class="btn-read">Coming Soon!</a>
+                <a href="onl-guides/robberies.html" class="btn-read">Read Guide</a>
+            </div>
+
+             <!-- Card 1: Getting Started -->
+            <div class="guide-card">
+                <div class="card-header">
+                    <span class="card-icon">
+                        <img style="width: 30px; border-radius: 20px;" src="assets/favicon.png" alt="EclipseESK Logo">
+                    </span>
+                    <h2 class="card-title">How to Install Road Textures</h2>
+                </div>
+                <p class="card-summary">
+                    Download .rpf File Here: <a class="link" href="https://mega.nz/file/sZdjTS7B#DkC-xim9DYJWA0dGYrhfHMxlui30U3jOoqT8njacw5o">Download On Mega</a>
+                </p>
+                <a href="onl-guides/road-textures.html" class="btn-read">Read Guide</a>
             </div>
 
             
@@ -450,6 +472,11 @@
             </div>
             <div class="footer-links">
                 <a href="https://discord.gg/apB5FThr4H" target="_blank">Join Server</a>
+                <a href="rules.html">Read Rules</a>
+                <a href="guides.html">Online Guides</a>
+                <a href="https://lifeinvader.eclipse-rp.net/" target="_blank">Life Invader</a>
+                <a href="https://rage.mp/" target="_blank">Rage Multiplayer</a>
+                <a href="https://eclipse-rp.net/" target="_blank">EclipseRP</a>
             </div>
         </div>
     </footer>
