--- a/index.html
+++ b/index.html
@@ -345,12 +345,22 @@
                     <!-- Updated links -->
                     <a href="index.html" class="nav-link">Home</a>
                     <a href="rules.html" class="nav-link">Rules</a>
+
+                    <div class="nav-dropdown">
+                        <a href="#" class="nav-link">Resources</a>
+                        <div class="dropdown-content">
+                            <a href="onl-guides/road-textures.html">Road Texture DLC Pack</a>
+                        </div>
+                    </div>
+
                     <div class="nav-dropdown">
                         <a href="guides.html" class="nav-link">Guides</a>
                         <div class="dropdown-content">
                             <a href="onl-guides/getting-started.html">Getting Started</a>
+                            <a href="onl-guides/robberies.html">How to Start Robberies</a>
                         </div>
                     </div>
+
                     <a href="https://discord.gg/apB5FThr4H" class="btn-join">Join Server</a>
                 </div>
 
@@ -460,6 +470,11 @@
             </div>
             <div class="footer-links">
                 <a href="https://discord.gg/apB5FThr4H" target="_blank">Join Server</a>
+                <a href="rules.html">Read Rules</a>
+                <a href="guides.html">Online Guides</a>
+                <a href="https://lifeinvader.eclipse-rp.net/" target="_blank">Life Invader</a>
+                <a href="https://rage.mp/" target="_blank">Rage Multiplayer</a>
+                <a href="https://eclipse-rp.net/" target="_blank">EclipseRP</a>
             </div>
         </div>
     </footer>
